--- a/rules.html
+++ b/rules.html
@@ -47,6 +47,6 @@
     <img src="https://media.discordapp.net/attachments/935602327866458154/1443532320287096832/Sans_titre-17-Rules_Exterieur.png?ex=692969bc&is=6928183c&hm=6d19fa46ea1501f0912b138763cfe68af10441dc7be39c358ebedfaed4d70925&=&format=webp&quality=lossless&width=1954&height=1382" alt="Rules extérieur" />
   </div>
 
-  <a class="back" href="index.html">⬅ Back</a>
+  <a class="back" href="index.html">⬅ Back to the menu</a>
 </body>
 </html>
