--- a/infos.html
+++ b/infos.html
@@ -2,32 +2,51 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Tiger's Web - Fiches d'information</title>
+  <title>Tiger's Web - Informations Sheets</title>
   <style>
     body {
-      font-family: Arial;
-      background: #154734;
-      color: white;
-      padding: 30px;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(180deg, #0b3a24, #084422);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      font-family: Arial, sans-serif;
+      color: #fff;
+      text-align: center;
     }
-    h1 { text-align: center; }
-    .card {
-      background: rgba(0,0,0,0.4);
-      padding: 20px;
-      border-radius: 12px;
+    h1 {
+      font-size: 60px;
       margin-bottom: 20px;
+      text-shadow: 3px 3px 10px black;
     }
-    a { color: #f1c40f; font-size: 22px; }
+    p {
+      font-size: 28px;
+      opacity: 0.85;
+      margin-bottom: 40px;
+    }
+    a.back {
+      padding: 12px 24px;
+      background: #2c6e49;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 10px;
+      font-size: 22px;
+      transition: 0.3s;
+    }
+    a.back:hover {
+      background: #3b844e;
+    }
   </style>
 </head>
 <body>
-  <h1>Fiches d'information - Tiger's Web</h1>
 
-  <div class="card">
-    <h2>Exemple de fiche</h2>
-    <p>Ici apparaîtront les fiches explicatives que tu me demanderas de rédiger.</p>
-  </div>
+  <h1>Coming Soon ⚙️</h1>
+  <p>The information sheets are coming soon!</p>
 
-  <br><a href="index.html">⬅ Retour</a>
+  <a href="index.html" class="back">⬅ Back</a>
+
 </body>
 </html>
