--- a/rules.html
+++ b/rules.html
@@ -43,8 +43,8 @@
 </head>
 <body>
   <div class="rules-container">
-    <img src="https://media.discordapp.net/attachments/935602327866458154/1443532320949928068/Sans_titre-16-Rules_Interieur.png?ex=692969bc&is=6928183c&hm=19deeb58babd570e2fe586e3726f4f7defd96686d282d4d35955c2955ff33810&=&format=webp&quality=lossless&width=1954&height=1382" alt="Rules intérieur" />
-    <img src="https://media.discordapp.net/attachments/935602327866458154/1443532320287096832/Sans_titre-17-Rules_Exterieur.png?ex=692969bc&is=6928183c&hm=6d19fa46ea1501f0912b138763cfe68af10441dc7be39c358ebedfaed4d70925&=&format=webp&quality=lossless&width=1954&height=1382" alt="Rules extérieur" />
+    <img src="Sans titre-16-Rules Intérieur.png" alt="Rules intérieur" />
+    <img src="Sans titre-17-Rules Extérieur.png" alt="Rules extérieur" />
   </div>
 
   <a class="back" href="index.html">⬅ Back to the menu</a>
