--- a/rules.html
+++ b/rules.html
@@ -43,8 +43,8 @@
 </head>
 <body>
   <div class="rules-container">
-    <img src="Sans titre-16-Rules Intérieur.png" alt="Rules intérieur" />
-    <img src="Sans titre-17-Rules Extérieur.png" alt="Rules extérieur" />
+    <img src="regle1.png" alt="Rules intérieur" />
+    <img src="regle2.png" alt="Rules extérieur" />
   </div>
 
   <a class="back" href="index.html">⬅ Back to the menu</a>
