--- a/rules.html
+++ b/rules.html
@@ -43,8 +43,8 @@
 </head>
 <body>
   <div class="rules-container">
-    <img src="regle1.png" alt="Rules intérieur" />
-    <img src="regle2.png" alt="Rules extérieur" />
+    <img src="https://image.noelshack.com/fichiers/2025/48/5/1764323685-sans-titre-16-rules-inte-rieur.jpg" alt="Rules intérieur" />
+    <img src="https://image.noelshack.com/fichiers/2025/48/5/1764323685-sans-titre-17-rules-exte-rieur.jpg" alt="Rules extérieur" />
   </div>
 
   <a class="back" href="index.html">⬅ Back to the menu</a>
